<resources>
    <string name="app_name">WardrobeWizard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="wardrobe_wizard">Wardrobe Wizard</string>
    <string name="profile_name">Profile Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="outfits">Outfits</string>
    <string name="planner">Planner</string>
    <string name="laundry">Laundry</string>
    <string name="stats">Stats</string>
    <string name="size" />
    <string name="Color" />
    <string name="Style" />
</resources>