<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E1323">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomMenu"
        android:layout_width="392dp"
        android:layout_height="66dp"
        android:background="@color/white"
        app:itemHorizontalTranslationEnabled="false"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageButton
        android:id="@+id/outfitsPic"
        android:layout_width="134dp"
        android:layout_height="122dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/calendarPic"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/outfit_laid_out_on_bed_blue_shirt_black_and_white_shoes_blue_jeans_gold_necklace_silver_watch_m_" />

    <TextView
        android:id="@+id/header_homepage"
        android:layout_width="317dp"
        android:layout_height="66dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="serif"
        android:text="@string/wardrobe_wizard"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/profilePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Wardrobe Wizard" />

    <ImageButton
        android:id="@+id/profilePic"
        android:layout_width="131dp"
        android:layout_height="114dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/profileName"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile_pic"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="93dp"
        android:text="@string/profile_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="201dp"
        tools:text="Profile Name" />

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="73dp"
        android:baselineAligned="false"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="#8CFBFAFA"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/plannerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="351dp" />

    <ImageButton
        android:id="@+id/calendarPic"
        android:layout_width="137dp"
        android:layout_height="117dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/planner" />

    <ImageButton
        android:id="@+id/laundryBasket"
        android:layout_width="135dp"
        android:layout_height="130dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="44dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
        app:layout_constraintEnd_toStartOf="@+id/Stats"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/washer" />

    <ImageButton
        android:id="@+id/Stats"
        android:layout_width="145dp"
        android:layout_height="136dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="44dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/growth" />

    <TextView
        android:id="@+id/outfitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="2dp"
        android:text="@string/outfits"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/outfitsPic"
        app:layout_constraintEnd_toStartOf="@+id/plannerText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/plannerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="2dp"
        android:text="@string/planner"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/calendarPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="2dp"
        android:text="@string/laundry"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/laundryBasket"
        app:layout_constraintEnd_toStartOf="@+id/Stats"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:text="@string/stats"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Stats"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>