<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Closet Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1976D2"
        android:elevation="2dp"
        android:padding="16dp"
        android:text="Closet"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <!-- Top Navigation Bar -->
    <LinearLayout
        android:id="@+id/navigationBarLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/titleTextView">

        <!-- All Category Tab -->
        <TextView
            android:id="@+id/allTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#1976D2"
            android:onClick="goToStartScreen"
            android:padding="16dp"
            android:text="All"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 1: Shirts -->
        <TextView
            android:id="@+id/shirtsTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Shirts"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 2: Pants -->
        <TextView
            android:id="@+id/pantsTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Pants"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 3: Shoes -->
        <TextView
            android:id="@+id/shoesTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Shoes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 4: Accessories -->
        <TextView
            android:id="@+id/accessoriesTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Other"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- Sort Button -->

    <!-- Image Description Section -->
    <LinearLayout
        android:id="@+id/imageDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navigationBarLayout"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Image View -->

        <TextView
            android:id="@+id/textView40"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="Shoes"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sortButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="107dp"
            android:layout_height="36dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/black"
            android:text="Sort"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:onClick="goToImageDescriptionScreen"
            android:scaleType="fitCenter"
            android:src="@drawable/shoe" />

        <!-- Image Facts -->
        <EditText
            android:id="@+id/factsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter image facts"
            android:maxLines="3" />

        <!-- Size Dropdown -->

        <!-- Color Dropdown -->
        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/size"
            android:prompt="@string/size" />

        <Spinner
            android:id="@+id/colorSpinner"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/Color"
            android:prompt="@string/Color" />

        <!-- Price Dropdown -->

        <!-- Style Dropdown -->
        <Spinner
            android:id="@+id/styleSpinner"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/Style"
            android:prompt="@string/Style" />

        <TextView
            android:id="@+id/priceSpinner"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Price"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="131dp"
            android:layout_height="36dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- Add More Button -->
    <Button
        android:id="@+id/addMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="addMoreClothingItem"
        android:text="Add More" />

</RelativeLayout>