<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    tools:visibility="visible">

    <!-- Closet Title -->

    <!-- Top Navigation Bar -->


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1976D2"
        android:elevation="2dp"
        android:padding="20dp"
        android:text="Closet"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <LinearLayout
        android:id="@+id/navigationBarLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/titleTextView">

        <!-- All Category Tab -->
        <TextView
            android:id="@+id/allTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#1976D2"
            android:onClick="goToStartScreen"
            android:padding="16dp"
            android:text="All"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 1: Shirts -->
        <TextView
            android:id="@+id/shirtsTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Shirts"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 2: Pants -->
        <TextView
            android:id="@+id/pantsTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Pants"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 3: Shoes -->
        <TextView
            android:id="@+id/shoesTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Shoes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Category 4: Accessories -->
        <TextView
            android:id="@+id/accessoriesTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#1976D2"
            android:onClick="openImageDescription"
            android:padding="16dp"
            android:text="Other"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- Sort Button -->

    <!-- Image Description Section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/navigationBarLayout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/imageDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/navigationBarLayout"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Image View -->

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="84dp"
                android:layout_height="71dp"
                android:background="@color/white"
                android:contentDescription="Home Button"
                android:onClick="goToHomePage"
                android:padding="8dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="126dp"
                android:layout_height="40dp"
                android:text="All Clothes"
                android:textSize="16sp" />


            <Button
                android:id="@+id/sortButton"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/black"
                android:text="Sort"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:onClick="goToImageDescriptionScreen"
                android:scaleType="centerCrop"
                android:src="@drawable/jacket1" />

            <!-- Image Facts -->
            <EditText
                android:id="@+id/factsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter image Description"
                android:maxLines="3" />

            <!-- Size Dropdown -->

            <!-- Color Dropdown -->
            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/size"
                android:prompt="@string/size" />

            <Spinner
                android:id="@+id/colorSpinner"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/Color"
                android:prompt="@string/Color" />

            <!-- Price Dropdown -->

            <!-- Style Dropdown -->
            <Spinner
                android:id="@+id/styleSpinner"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/Style"
                android:prompt="@string/Style" />

            <TextView
                android:id="@+id/priceSpinner"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Price"
                 />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="131dp"
                android:layout_height="36dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp" />


            <Button
                android:id="@+id/addMoreButton"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"
                android:backgroundTint="@color/black"
                android:text="Add More"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
